--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"scripts:build": "node ./scripts/build",
 		"preview": "vite preview",
 		"preinstall": "lefthook install"
 	},
