chore(.vscode): antfu.file-nesting replace json setting

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "biomejs.biome",
     "bradlc.vscode-tailwindcss",
     "lokalise.i18n-ally",
-    "adam-bender.commit-message-editor"
+    "adam-bender.commit-message-editor",
+    "antfu.file-nesting"
   ]
 }
