--- a/apps/mall4r/package.json
+++ b/apps/mall4r/package.json
@@ -1,34 +1,50 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "antd": "^5.27.5",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-error-boundary": "^6.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react-swc": "^4.1.0",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
-  }
+	"name": "mall4r",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,scss,json,md}\""
+	},
+	"dependencies": {
+		"@ant-design/icons": "^5.6.1",
+		"antd": "^5.27.5",
+		"axios": "^1.7.8",
+		"axios-retry": "^4.5.0",
+		"crypto-js": "^4.2.0",
+		"js-cookie": "^3.0.5",
+		"json-bigint": "^1.0.0",
+		"qs": "^6.14.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-error-boundary": "^6.0.0",
+		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.9.4"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.36.0",
+		"@tailwindcss/vite": "^4.1.14",
+		"@types/crypto-js": "^4.2.2",
+		"@types/js-cookie": "^3.0.6",
+		"@types/json-bigint": "^1.0.4",
+		"@types/node": "^24.6.0",
+		"@types/qs": "^6.14.0",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.7",
+		"@vitejs/plugin-react-swc": "^4.1.0",
+		"eslint": "^9.36.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.22",
+		"globals": "^16.4.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-tailwindcss": "^0.7.1",
+		"tailwindcss": "^4.1.14",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.45.0",
+		"vite": "^7.1.7"
+	}
 }
