--- a/apps/mall4r/package.json
+++ b/apps/mall4r/package.json
@@ -23,7 +23,8 @@
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^6.0.0",
 		"react-redux": "^9.2.0",
-		"react-router-dom": "^7.9.4"
+		"react-router-dom": "^7.9.4",
+		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
