--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,10 +13,10 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome"
@@ -28,5 +28,6 @@
     "**/node_modules/*/**": true,
     "**/bower_components/*/**": true,
     "**/dist/**": true // 根据你的项目添加其他不需要索引的文件夹
-  }
+  },
+  "i18n-ally.localesPaths": ["src/locales", "src/locales/lang"]
 }
